Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-45755

Flushing race condition during warmup causes items and state to be flushed to the wrong vBuckets

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Critical
    • 7.0.0
    • Cheshire-Cat
    • couchbase-bucket
    • 7.0.0-4960
    • Untriaged
    • 1
    • Yes
    • KV-Engine CC Final Sprint

    Description

      Test: Kill memcached during doc ops.

      172.23.107.97: Found ' ERROR ' in logs

      2021-04-18T22:10:55.991624-07:00 ERROR (default) CouchKVStore::initialize: readVBState error:CouchstoreError, file_name:/data/default/557.couch.4\n', '2021-04-18T22:10:55.991781-07:00 ERROR 712: Failed to create bucket [default]: CouchKVStore::initialize: readVBState error:CouchstoreError, file_name:/data/default/557.couch.4\n', '2021-04-18T22:10:56.005596-07:00 ERROR (default) CouchKVStore::initialize: readVBState error:CouchstoreError, file_name:/data/default/557.couch.4\n', '2021-04-18T22:10:56.005752-07:00 ERROR 644: Failed to create bucket [default]: CouchKVStore::initialize: readVBState error:CouchstoreError, file_name:/data/default/557.couch.4\n', '2021-04-18T22:10:56.020644-07:00 ERROR (default) CouchKVStore::initialize: readVBState error:CouchstoreError, file_name:/data/default/557.couch.4\n', '2021-04-18T22:10:56.020876-07:00 ERROR 712: Failed to create bucket [default]: CouchKVStore::initialize: readVBState error:CouchstoreError, file_name:/data/default/557.couch.4\n', '2021-04-18T22:10:56.035763-07:00 ERROR (default) CouchKVStore::initialize: readVBState error:CouchstoreError, file_name:/data/default/557.couch.4\n', '2021-04-18T22:10:56.035945-07:00 ERROR 712: Failed to create bucket [default]: CouchKVStore::initialize: readVBState error:CouchstoreError, file_name:/data/default/557.couch.4\n', '2021-04-18T22:10:56.050568-07:00 ERROR (default) CouchKVStore::initialize: readVBState error:CouchstoreError, file_name:/data/default/557.couch.4\n', '2021-04-18T22:10:56.050793-07:00 ERROR 959: Failed to create bucket [default]: CouchKVStore::initialize: readVBState error:CouchstoreError, file_name:/data/default/557.couch.4\n'
      

      QE Test

      guides/gradlew --refresh-dependencies testrunner -P jython=/opt/jython/bin/jython -P 'args=-i /tmp/testexec.56244.ini -p bucket_storage=couchstore,rerun=false,GROUP=P0;replicas_recovery,randomize_value=true,doc_size=256,bucket_eviction_policy=fullEviction,nodes_init=4,get-cbcollect-info=True,upgrade_version=7.0.0-4960 -t magma.magma_crash_recovery.MagmaCrashTests.test_crash_during_recovery,num_items=5000000,doc_size=1024,sdk_timeout=60,doc_ops=create,replicas=1,GROUP=P0;replicas_recovery'
      

      Attachments

        Issue Links

          Activity

            People

              ritesh.agarwal Ritesh Agarwal
              ritesh.agarwal Ritesh Agarwal
              Votes:
              0 Vote for this issue
              Watchers:
              10 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                PagerDuty